--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,23 @@
 <style>
-        footer {
-                bottom: 0;
-                width: 100%;
-                text-align: center;
-                background-color: #FA936D;
-                color: white;
-                height: 80px;
+        #footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            /* Height of the footer*/
+            height: 330px;
+            background: #FA936D;
         }
 </style>
 
-<footer>
-        <div class="col-lg-6 mx-auto">
-                <div class="text-center p-4 fw-bold">
-                        © 2022 Copyright
+<center>
+        <div id="footer">
+                <img class="d-block mx-auto mb-6" src="static/images/logorb.png" alt="" width="300" height="145">
+                <div class="col-lg-6 mx-auto">
+                        <p class="lead mb-4">Satisfacer las necesidades gastrónomicas de nuestros clientes, ofreciendo alimentos y servicios con la más alta calidad, donde se sobrepasen las espectativas de nuestros clientes y ser un espacio que permita la realización
+                                personal y el Desarrollo de sus colaboradires en el equipo.</p>
+                        <div class="text-center p-6 fw-bold">
+                               © 2022 Copyright
+                        </div>
                 </div>
         </div>
-</footer>
+</center>
