--- a/templates/index.html
+++ b/templates/index.html
@@ -19,41 +19,47 @@
     {% include 'navbar.html' %}
         {% block content %}
         <br></br>
-        <div class="jumbotron text-center col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
+        <div class="jumbotron text-center col-lg-10 col-md-10 col-sm-10 col-xs-10 offset-1 float-md-center">
           <h1 class="display-4">Búsqueda</h1>
           <hr class="my-4">
           {% if username %}
           <p class="lead">
             <label class="form-label">Bienvenido, {{ username }} </label><br>
-            {% endif %}
-          <p class="lead">¿Desea realizar la búsqueda de un producto en especial?</p>
-          <div class="text-center col-lg-6 offset-3 float-md-center" id="barramenu">
-              <form action="" method="post" class="d-flex">
-                  <input class="form-control me-2" type="text" placeholder="Producto a buscar" name="producto" value="{{ request.form.producto }}">
-                  <input class="btn btn-dark" type="submit" name="boton" value="Buscar">
+          {% endif %}
+          <div class="container" id="barramenu">
+            <h5>¿Desea realizar la búsqueda de un producto en especial?</h5>
+            <form action="" method="post">
+              <div class="jumbotron text-center col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
+                    <input class="form-control rounded" type="text" placeholder="Producto a Buscar..." name="producto" value="{{ request.form.producto }}">
+                    <input class="btn btn-dark" type="submit" name="boton" value="Buscar">
                   {% if error %}
                     <p class="error"> {{ error }}</p>
                   {% endif %}
-                  <div class="shop-items">
-                  {% if productos %}
-                    {%for k,v in productos.items() %}
-                      <div class="shop-item">
-                        <span class="shop-item-title">{{  v['title'] }}</span>
-                        <img class="shop-item-image" style="height: 90px;" src="{{  v['thumbnail'] }}">
-                        <div class="shop-item-details">
+              </div>
+              <div class="jumbotron">
+                {% if productos %}
+                <div class="gallery">
+                  {%for k,v in productos.items() %}
+                  <div class="content" style="background-color:#FFFFFF;">
+                      <span class="shop-item-title">{{  v['title'] }}</span>
+                      <img class="shop-item-image" src="{{  v['thumbnail'] }}">
+                      <div class="shop-item-details">
+                        <div class="container">
                           <span class="shop-item-price">${{  v['precio'] }}</span>
-                            {% if username %}
-                              <button class="btn btn-dark shop-item-button" type="submit" value="{{ k }}" name="boton">Agregar al Carrito</button>
-                            {% endif %}
                         </div>
-                      </div>
-                    {%endfor %}
-                  {% endif %}
+                        {% if username %}
+                          <button class="shop-item-button" type="submit" value="{{ k }}" name="boton">Agregar al Carrito</button>
+                        {% endif %}
+                    </div>
                   </div>
-                </form>
+                  {%endfor %}
+                </div>
+                {% endif %}
+              </div>
+            </form>
           </div>
           </p>
-   </div>
+        </div>
         {% endblock %}
   </body>
 </html>
