index buttons update

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -78,3 +78,34 @@
         padding: 1rem 1rem;
     }
 }
+
+.btn-search {
+    background-color: #FA936D;
+    border-radius: 12px;
+    color: #000;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    width: 15%;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.btn-search:not(:disabled):hover,
+.btn-search:not(:disabled):focus {
+    outline: 0;
+    background: #FA936D;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, .2), 0 3px 8px 0 rgba(0, 0, 0, .15);
+}
+
+.btn-search:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+}
