--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <form action="" method="post">
               <div class="jumbotron text-center col-lg-6 col-md-6 col-sm-6 col-xs-6 offset-3 float-md-center">
                     <input class="form-control rounded" type="text" placeholder="Producto a Buscar..." name="producto" value="{{ request.form.producto }}">
-                    <input class="btn btn-dark" type="submit" name="boton" value="Buscar">
+                    <input class="btn-search" type="submit" name="boton" value="Buscar">
                   {% if error %}
                     <p class="error"> {{ error }}</p>
                   {% endif %}
